[package]
name = "usbd-audio"
description = "USB Audio 1.0 class for usb-device"
authors = ["Stephan <kiffie@mailbox.org>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/kiffie/usbd-audio"
keywords = ["no-std", "usb-device", "pic32", "rp2040"]
license = "MIT OR Apache-2.0"
include = ["README.md", "/src", "LICENSE"]

[dependencies]
defmt = { version = "0.3", features = ["encoding-rzcobs"] }
defmt-brtt = { version = "0.1", default-features = false, features = ["rtt"] }

# usb-device = { path = "../usb-device", features = ["control-buffer-256"]}
usb-device = { version = "0.2.8" }

[patch.crates-io]
usb-device = { path = "../usb-device"}

[features]
async-synchronization = ["usb-device/synchronization-type"]